feat: Localize app and improve prompt analysis
Updates package name, HTML title and language to Chinese.
Enhances prompt analysis type to support bilingual output.
Adds Chinese translations for categories, styles, and aspect ratios.
Improves `reverseImagePrompt` to return bilingual descriptions.
Updates `AdviceModal` with localized content.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "promptverse---ai-prompt-repository",
+  "name": "promptverse---ai-提示词宇宙",
   "private": true,
   "version": "0.0.0",
   "type": "module",
